<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_red"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"
        android:orderInCategory="100" />

    <item
        android:id="@+id/settings_item"
        android:title="@string/settings"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings_applications_red"/>


    <item
        android:id="@+id/login_admin"
        android:title="@string/login_admin"
        android:orderInCategory="300"
        app:showAsAction="collapseActionView" />

</menu>